        - 119 sizegroups-basics.ui
      + reftests-hc and reftests only:
        - 10 background-origin.ui
  * Sort dependency lists (wrap-and-sort -a)
  * d/gtk-3-examples.install: Sort file list (wrap-and-sort -a)
  * Use the same Xvfb screen configuration as in the upstream GTK+ 4
    Gitlab-CI tests. This will hopefully make GLX work (see also #874077)
  * Update d/gbp.conf from glib2.0

 -- Simon McVittie <smcv@debian.org>  Thu, 13 Sep 2018 08:29:08 +0100

gtk+3.0 (3.24.0-3) unstable; urgency=medium

  * Cherry-pick 3c7d5e7 to fix a critical on gtk_application_shutdown when not
    using portals (Closes: #908070)
  * Add Applied-Upstream to last cherry-pick
  * Fix-portal-path-handling.patch: Cherry-pick from upstream.  Fix an
    incorrect dereference in the portal handling code.

 -- Iain Lane <laney@debian.org>  Tue, 11 Sep 2018 17:33:38 +0100

gtk+3.0 (3.24.0-2) unstable; urgency=medium

  * Team upload
  * d/p/Revert-imwayland-clear-preedit-on-focus-out.patch:
    Revert an upstream change that caused the cursor to disappear on
    focus changes in vte terminals like gnome-terminal and lxterminal
    under Wayland (Closes: #908120)
  * debian/libgtk-3-0.symbols: gtk_color_picker_kwin_new() is new in
    3.24.0, not 3.24.3 which doesn't exist yet
  * d/p/Don-t-test-default-constructed-GdkPixbuf-properties.patch:
    Work around a gdk-pixbuf bug that caused test failures
    (Closes: #908439)
  * d/gbp.conf: Don't number patches

 -- Simon McVittie <smcv@debian.org>  Mon, 10 Sep 2018 01:15:53 +0100

gtk+3.0 (3.24.0-1) unstable; urgency=medium

  [ Simon McVittie ]
  * debian/libgtk-3-0.bug-control:
    When bugs are reported against GTK+, include details of various
    engines, modules and LD_PRELOADs if installed
  * Don't install ChangeLog, which currently just says
    "A git checkout and git-log is required to generate this file";
    even if it was complete, Policy 4.2.0 does not require detailed