@@ -16,11 +16,12 @@ Build-Depends: adwaita-icon-theme <!nocheck>,
                libcairo2-dev (>= 1.14.0),
                libcolord-dev (>= 0.1.9),
                libcups2-dev (>= 1.2),
-               libegl1-mesa-dev [linux-any],
+               libegl1-mesa-dev,
                libepoxy-dev (>= 1.4),
                libfontconfig1-dev,
                libgdk-pixbuf2.0-dev (>= 2.30.0),
                libgirepository1.0-dev (>= 1.39.0),
+               libgl1-mesa-dev,
                libglib2.0-dev (>= 2.53.4),
                libharfbuzz-dev (>= 0.9),
                libjson-glib-dev,
@@ -135,10 +136,11 @@ Depends: gir1.2-gtk-3.0 (= ${binary:Version}),
          libatk-bridge2.0-dev,
          libatk1.0-dev (>= 2.15.1),
          libcairo2-dev (>= 1.14.0),
-         libegl1-mesa-dev [linux-any],
+         libegl1-mesa-dev,
          libepoxy-dev (>= 1.0),
          libfontconfig1-dev,
          libgdk-pixbuf2.0-dev (>= 2.30.0),
+         libgl1-mesa-dev,
          libglib2.0-dev (>= 2.49.4),
          libpango1.0-dev (>= 1.41),
          libwayland-dev (>= 1.9.91) [linux-any],
