@@ -28,6 +28,8 @@ gtk+3.0 (3.24.1-1) UNRELEASED; urgency=medium
   * Use the same Xvfb screen configuration as in the upstream GTK+ 4
     Gitlab-CI tests. This will hopefully make GLX work (see also #874077)
   * Update d/gbp.conf from glib2.0
+  * Temporarily (B-)D on libgl1-mesa-dev and libegl1-mesa-dev to work
+    around #909173 in libepoxy
 
  -- Simon McVittie <smcv@debian.org>  Thu, 13 Sep 2018 08:29:08 +0100
 
